<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mytool</name>
  <version>1.2.6</version>
  <description>
    a tool made for moving robots around
  </description>
  <maintainer email="user@mail.com">user</maintainer>
  <license>todo</license>


  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
